--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -10,32 +10,44 @@ on:
     branches:
       - main
 
-jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
+      jobs:
+        build-and-test:
+          runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x, 18.x] # Test against multiple versions of Node.js
+          strategy:
+            matrix:
+              node-version: [16.x, 18.x] # Test against multiple versions of Node.js
 
-    steps:
-      # Step 1: Check out the code from the repository
-      - name: Checkout code
-        uses: actions/checkout@v3
+          steps:
+            # Step 1: Check out the code from the repository
+            - name: Checkout code
+              uses: actions/checkout@v3
 
-      # Step 2: Set up Node.js with the specified version
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
+            # Step 2: Set up Node.js with the specified version
+            - name: Set up Node.js
+              uses: actions/setup-node@v3
+              with:
+                node-version: ${{ matrix.node-version }}
 
-      # Step 3: Cache `node_modules` for faster builds
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+            # Step 3: Cache `node_modules` for faster builds
+            - name: Cache node modules
+              uses: actions/cache@v3
+              with:
+                path: node_modules
+                key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+                restore-keys: |
+                  ${{ runner.os }}-node-
 
-      # Step 4: Install dependencies using npm
+            # Step 4: Install dependencies using npm
+            - name: Install dependencies
+              run: npm install
+
+            # Step 5: Run the build (optional, if you have a build step)
+            - name: Build application
+              run: npm run build
+
+            # Step 6: Run Jest tests
+            - name: Run Jest tests
+              run: npm test
+              env:
+                CI: true  # Ensures Jest exits after tests are run
