--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,25 @@
-version: '3'
-
+---
 services:
   # Service for the React app
-  react-app:
-    container_name: react-app
-    build:
-      context: .  # Assuming Dockerfile is in the root directory
-    ports:
-      - "3000:3000"  # Expose React app on port 3000
-    volumes:
-      - ./src:/app/src  # Hot-reload React app by mounting the source directory
-      - /app/node_modules  # Avoid overriding node_modules with a volume
-    command: npm start  # Start the React app
-    environment:
-      - CHOKIDAR_USEPOLLING=true  # For hot-reloading inside Docker (optional, improves file watching on certain platforms)
+  # react-app:
+  #   container_name: react-app
+  #   build:
+  #     context: .  # Assuming Dockerfile is in the root directory
+  #   ports:
+  #     - "3000:3000"  # Expose React app on port 3000
+  #   volumes:
+  #     - ./src:/app/src  # Hot-reload React app by mounting the source directory
+  #     - /app/node_modules  # Avoid overriding node_modules with a volume
+  #   command: npm start  # Start the React app
+  #   environment:
+  #     - CHOKIDAR_USEPOLLING=true  # For hot-reloading inside Docker (optional, improves file watching on certain platforms)
 
   # Service for json-server
   json-server:
     container_name: json-server
-    image: clue/json-server  # Uses the official json-server Docker image
+    image: isdzulqor/json-server:latest  # Uses the official json-server Docker image
     ports:
-      - "3002:3000"  # Map port 3002 on host to port 3000 in the container
+      - "3002:80"  # Map port 3002 on host to port 3000 in the container
     volumes:
-      - ./public/weights.json:/app/db.json  # Bind weights.json to db.json in the container
-    command: json-server --watch /app/db.json --port 3000  # Run json-server in watch mode
-    environment:
-      - NODE_ENV=development  # Optional: Set the environment to development
+      - ./public/data:/app  # Bind weights.json to db.json in the container
+    command: json-server /app/db.json --watch # Run json-server in watch mode
