Removed comment out for json server in docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 ---
 services:
   # Service for the React app
-  # react-app:
-  #   container_name: react-app
-  #   build:
-  #     context: .  # Assuming Dockerfile is in the root directory
-  #   ports:
-  #     - "3000:3000"  # Expose React app on port 3000
-  #   volumes:
-  #     - ./src:/app/src  # Hot-reload React app by mounting the source directory
-  #     - /app/node_modules  # Avoid overriding node_modules with a volume
-  #   command: npm start  # Start the React app
-  #   environment:
-  #     - CHOKIDAR_USEPOLLING=true  # For hot-reloading inside Docker (optional, improves file watching on certain platforms)
+  react-app:
+    container_name: react-app
+    build:
+      context: .  # Assuming Dockerfile is in the root directory
+    ports:
+      - "3000:3000"  # Expose React app on port 3000
+    volumes:
+      - ./src:/app/src  # Hot-reload React app by mounting the source directory
+      - /app/node_modules  # Avoid overriding node_modules with a volume
+    command: npm start  # Start the React app
+    environment:
+      - CHOKIDAR_USEPOLLING=true  # For hot-reloading inside Docker (optional, improves file watching on certain platforms)
 
   # Service for json-server
   json-server:
