Ordering correction. Small update to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,5 @@ services:
     volumes:
       - ./public/data:/app  # Bind weights.json to db.json in the container
     command: json-server /app/db.json --watch # Run json-server in watch mode
+    environment:
+      NO_CORS: true
